# iter-chunks

./: AGENTS.md  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
